--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,8 +12,8 @@ Fonts are separated by a & */
   --accent2-color: #94AE89;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: 'https://fonts.googleapis.com/css?family=Lemon';
+  --paragraph-font: 'https://fonts.googleapis.com/css?family=Lemon';
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: black;  /* headlines on a white background */ 
