--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,12 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
+
 body {
     background-color: white;
     font-size: 100%;
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
     max-width: 100%;
+    font-family: 'lemon', Arial, sans-serif;
 }
 
 .home-title {
     color: #036016;
+    font-family: 'lemon', Arial, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 .button-box {
@@ -25,10 +32,15 @@ body {
     width: 100%;
 }
 
+#logo_link {
+    padding-top: 5px;
+}
+
 nav a {
     text-align: center;
     color: white;
     text-decoration: none;
+    padding: 35px;
 }
 
 nav a:hover {
@@ -40,6 +52,10 @@ nav a:hover {
     background-color: #94AE89;
     color: black;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover {
@@ -51,6 +67,10 @@ nav a:hover {
     background-color: #036016;
     color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .join:hover {
@@ -60,6 +80,8 @@ nav a:hover {
 
 .msg {
     background-color: #036016;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2 {
@@ -68,6 +90,8 @@ nav a:hover {
 
 .msg p {
     color: white;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 main section {
@@ -87,6 +111,10 @@ h1 {
 h1, h2, h3, h4, h5, h6 {
     color: blue;
     font-family: 'Courier New', Courier, monospace;
+}
+
+h2 {
+    margin: 0;
 }
 
 h3 {
@@ -112,6 +140,18 @@ img.logo {
     width: 100px;
 }
 
+.rivers-card {
+    margin: 200px 0;
+}
+
+.camping-card {
+    margin: 200px 0;
+}
+
+.rapids-card {
+    margin: 200px 0;
+}
+
 img.hero {
     width: 100%;
 }
@@ -129,12 +169,21 @@ img.card-img {
     margin: 0 auto;
 }
 
+.card-img {
+    border: 10px solid black;
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
 .logo {
     width: 80px;
 }
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 .the-plan {
@@ -144,6 +193,8 @@ img.card-img {
 footer {
     background-color: #2B2118;
     color: white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a{
@@ -161,4 +212,8 @@ footer p {
 
 footer p a:hover {
     text-decoration: underline;
+}
+
+footer .social img {
+    padding-top: 15px;
 }
