fixed bugs with green

--- a/projects/positioning/positioning/positionstyles.css
+++ b/projects/positioning/positioning/positionstyles.css
@@ -5,7 +5,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
-  gap: 2em;
+  gap: 20px;
 }
 .red1 { 
   width: 100%; 
