--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -23,8 +23,31 @@ body {
     margin-top: 10px;
 }
 
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10 * 1fr)
+}
+
 .button-box {
     text-align: center;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 #hero-msg h1 {
@@ -33,6 +56,7 @@ body {
 
 #hero-msg h4 {
     text-align: center;
+    color: white;
 }
 
 #hero-img {
@@ -94,6 +118,8 @@ nav a:hover {
     background-color: #036016;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
 }
 
 .msg h2 {
@@ -152,16 +178,31 @@ img.logo {
     width: 100px;
 }
 
+.card-img, .mountains {
+    width: 100%;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+}
+
 .rivers-card {
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
 }
 
 .camping-card {
     margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
 }
 
 .rapids-card {
     margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 img.hero {
@@ -175,6 +216,8 @@ div.social img {
 #background {
     height: 725px;
     background-color: #2B2118;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 img.card-img {
@@ -213,6 +256,9 @@ footer {
     color: white;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a{
