--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -4,8 +4,6 @@ header {
     display: grid;
     grid-template-columns: 150px auto;
 }
-         
-
 
 body {
     background-color: white;
@@ -147,7 +145,12 @@ h1 {
     font-size: 3em;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: blue;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -179,7 +182,8 @@ img.logo {
     width: 100px;
 }
 
-.card-img, .mountains {
+.card-img,
+.mountains {
     width: 100%;
 }
 
@@ -270,7 +274,7 @@ footer {
     align-items: center;
 }
 
-footer a{
+footer a {
     color: blue;
     text-decoration: none;
 }
@@ -281,7 +285,7 @@ footer a:hover {
 
 footer p {
     font-size: 1.2em;
-}    
+}
 
 footer p a:hover {
     text-decoration: underline;
@@ -292,44 +296,61 @@ footer .social img {
 }
 
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+
+    #hero,
+    .home-grid {
         display: block;
         height: auto;
     }
-    nav, footer {
+
+    nav,
+    footer {
         flex-direction: column;
     }
+
     nav a {
         display: block;
         padding: 15px;
     }
+
     #hero {
         margin-top: 0;
     }
+
     #hero-msg {
         margin-top: 0;
     }
+
     #hero-msg h4 {
         display: none;
     }
+
     #hero-msg h1 {
         color: #6f7364;
     }
+
     .home-title {
         font-size: 25px;
     }
-    .rivers-card, .camping-card, .rapids-card { 
+
+    .rivers-card,
+    .camping-card,
+    .rapids-card {
         margin: 50px auto;
         width: 60%;
     }
+
     #background {
         display: none;
     }
-    .mountains, .msg {
+
+    .mountains,
+    .msg {
         width: 80%;
         display: block;
         margin: 0 auto;
     }
+
     footer {
         margin-top: 25px;
     }
