--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -23,7 +23,7 @@ body {
 
 .home-grid {
     display: grid;
-    grid-template-columns: repeat(10 * 1fr)
+    grid-template-columns: repeat(10, 1fr)
 }
 
 .button-box {
