--- a/car_detailing/style/styles.css
+++ b/car_detailing/style/styles.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,7 +11,7 @@ Fonts are separated by a | */
   --accent2-color: #382400;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Courier New";
+  --heading-font: "Courier Prime";
   --paragraph-font: Brush Script MT, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
