--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -310,6 +310,21 @@ footer .social img {
     width: 1500px;
 }
 
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
+     
+
 @media screen and (max-width: 900px) {
 
     #hero,
