--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -290,7 +290,7 @@ footer .social img {
 
 #grid_content {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1fr, 1fr);
     grid-template-rows: repeat(3, 1fr);
     font-size: 25px;
     margin-top: 50px;
@@ -307,7 +307,7 @@ footer .social img {
 }
 
 #river_2, #river_1, #river_3 {
-    width: 1500px;
+    max-width: 100%;
 }
 
 #feedback {
