--- a/car_detailing/style/style.css
+++ b/car_detailing/style/style.css
@@ -37,8 +37,9 @@
       font-size: 24px;
     }
   
-    img#home_imgs {
-      width: 550px;
+    img#owner, img#clean_car {
+        width: 500px;
+        height: 500px;
     }
   
   
