--- a/car_detailing/style/styles.css
+++ b/car_detailing/style/styles.css
@@ -190,6 +190,7 @@ body {
     img#owner, img#clean_car {
         width: 500px;
         height: 500px;
+        display: inline-block;
     }
   
   
