--- a/car_detailing/style/styles.css
+++ b/car_detailing/style/styles.css
@@ -39,6 +39,9 @@ body {
     display: block;
     margin: 0 auto;
   }
+  h1 {
+    font-weight: bolder;
+  }
   h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--headline-color-on-white);
@@ -173,19 +176,12 @@ body {
     border-right: 1px solid;
   }
 
-  #home_info {
+  #home_info, #exterior, #interior {
     text-align: center;
     font-family: var(--paragraph-font);
     color: #ad8926;
-    font-size: 18px;
+    font-size: 32px;
   }
-  
-    #intro_comp {
-      font-family: var(--heading-font);
-      font-weight: bold;
-      color: #382400;
-      font-size: 24px;
-    }
   
     img#owner, img#clean_car {
         width: 500px;
@@ -193,4 +189,33 @@ body {
         display: inline-block;
     }
   
+  #grid_serv {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
   
+  #exterior {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    font-size: 24px;
+  }
+
+  img#ext_pic {
+    width: 500px;
+    padding-top: 65px;
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  img#int_pic {
+    width: 500px;
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  #int {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    font-size: 28px;
+  }
